@@ -93,3 +93,6 @@
 
   </toolbarpalette>
 </overlay>
+
+<!-- vim:ai:et:sw=2:ts=2:sts=2:tw=0:fenc=utf-8
+ -->
