@@ -1,1 +1,2 @@
 pref("extensions.firegpg.gmail_enabled", true);
+pref("extensions.firegpg.default_private_key", "");
